added new endpoint for testing
